# twoman

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  requirements.txt  twoman_crypto.py  twoman_dns.py  twoman_http.py  twoman_proxy.py  twoman_transport.py
android-client/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
desktop_app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop_app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop_app/src-tauri/src/: lib.rs  models.rs  runtime.rs  storage.rs  system_proxy.rs
desktop_app/src-tauri/tests/: live_runtime_flow.rs
desktop_client/: README.md  __init__.py  __main__.py  build_linux.sh  build_windows.bat  controller.py  models.py  paths.py  requirements.txt  runtime.py  socks_gateway.py  storage.py  tui.py
docs/: ARCHITECTURE.md  BACKENDS.md  CLPERSIST_METHOD.md  EASY_DEPLOY.md  HOST_APP_MAPPINGS.md  MANUAL_DEPLOY.md  PENTEST_RUNTIME_PLANE.md  RELEASE_CHECKLIST.md
hidden_server/: agent.py  agent_watchdog.py  config.sample.json  install_watchdog.sh
local_client/: config.sample.json  helper.py  install_systemd_user_service.sh
scripts/: deploy_hidden_server.sh  deploy_host.sh  deploy_host_node_selector.sh  deploy_host_passenger.sh  generate_camouflage_site.py  install_hidden_server_local.sh  install_twoman.sh  pentest_runtime_plane_probe.sh  purge_hidden_server.sh  purge_hidden_server_local.sh  purge_host_bridge.sh  purge_host_node_selector.sh  start_client.sh
tests/: benchmark_transport_profiles.sh  origin_server.py  run_desktop_client_e2e.sh  (+30 more)
(+98 files in other folders)
